--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <title>RNIB Accessible Gaming Report 2022</title>
   </head>
   <body>
-    <p>In 2022 RNIB worked with Moray House School of Education, University of Edinburgh and i2 media research, Goldsmiths, University of London to undertake a foundational piece of research to inform our work into accessible gaming. This involved quantitative research with gamers, non-gamers and ex-gamers with sight loss and gamers without sightloss. We then followed up with qualitative research with gamers with sightloss. At the same time we performed quantitative research with companies in the games industry to understand the motivations and barriers that influence their decisions around making games accessible or not. This repository holds the reports from the research in both PDF and word format. This report may be freely distributed as long as it is suitably referenced. If you have any questions then please get in touch.</p>
+    <h1>RNIB Accessible Gaming Report 2022</h1>
+    <p>In 2022 RNIB worked with Moray House School of Education, University of Edinburgh and i2 media research, Goldsmiths, University of London to undertake a foundational piece of research to inform our work into accessible gaming. This involved quantitative research with gamers, non-gamers and ex-gamers with sight loss and gamers without sightloss. We then followed up with qualitative research with gamers with sightloss.</p>
+    <p>At the same time we performed quantitative research with companies in the games industry to understand the motivations and barriers that influence their decisions around making games accessible or not.</p> 
+    <p>This repository holds the reports from the research in both PDF and word format. This report may be freely distributed as long as it is suitably referenced. If you have any questions then please get in touch.</p>
     <a href="https://github.com/RNIB-MediaAndCulture/AccessibleGamingReport/blob/main/RNIB%20Accessible%20Gaming%20Report_final_copy_sharing%20externally.docx">Word version of RNIB's Accessible Gaming Report 2022</a>
     <a href="https://github.com/RNIB-MediaAndCulture/AccessibleGamingReport/blob/main/RNIB%20Accessible%20Gaming%20Report_final_copy_sharing%20externally.pdf">PDF version of RNIB's Accessible Gaming Report 2022</a>
   </body>
